functioning dark mode but colors not correct yet

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -1,19 +1,21 @@
+
+// change this so that the dark mode colours are in a third column
 $color-palette:  
-("white",#FFFFFF),
-("black",#000000),
-("pumpkin-orange",rgb(252, 105, 100)),
-("java-green", #2CA4A4),
-("regal-blue", #182848),
-("supernova-yellow", #FCB233),
-("red-orange", #FD3D37),
-("deep-sky-blue", #1EB6FF),
-("dark-grey", #4A4A4A),
-("light-grey", #7E7E7E),
-("very-light-grey", #F3F4F6), 
-("very-dark-grey", #222222),
-("green", rgb(53, 203, 115)),
-("matisse-blue", #385473),
-("background-blue", #17171D);
+("white",#FFFFFF, #FFFFFF),
+("black",#000000, #000000),
+("pumpkin-orange",rgb(252, 105, 100), rgb(252, 105, 100)),
+("java-green", #2CA4A4, #2CA4A4),
+("regal-blue", #182848, #182848),
+("supernova-yellow", #FCB233, #FCB233),
+("red-orange", #FD3D37, #FD3D37),
+("deep-sky-blue", #1EB6FF, #1EB6FF),
+("dark-grey", #4A4A4A, #4A4A4A),
+("light-grey", #7E7E7E, #7E7E7E),
+("very-light-grey", #F3F4F6, #F3F4F6), 
+("very-dark-grey", #222222, #222222),
+("green", rgb(53, 203, 115), rgb(53, 203, 115)),
+("matisse-blue", #385473, #385473),
+("background-blue", #17171D, #FFFFFF);
 
 @each $color in $color-palette {
   .is-#{nth($color,1)}-bg{
@@ -21,5 +23,15 @@ $color-palette:
   }
   .is-#{nth($color,1)}-text{
     color: nth($color,2);
+  }
+
+  body.dark-mode {
+    .is-#{nth($color,1)}-text {
+      color: nth($color, 3);
+    }
+
+    .is-#{nth($color,1)}-bg {
+      color: nth($color, 3);
+    }
   }
 }
